@@ -2,6 +2,11 @@
 VERSION 0.7.2cvs
 ================
 
+2005-07-25  Vincent Richard  <vincent@vincent-richard.net>
+
+ * Messaging folder: added a FETCH_IMPORTANCE flag to fetch the fields used
+   with 'misc::importanceHelper'.
+
 2005-07-23  Vincent Richard  <vincent@vincent-richard.net>
 
  * POP3, IMAP, maildir: fixed getMessages() when default arguments are given:
